packages/swc-magic/transform/tests/errors/ts-with-css-resolve/input.js
import css from 'swc-magic/css'

export default css.resolve`
  .container {
    background: #000;
    color: white;
    font-weight: 700;
    height: 100px;
  }
`